falta o excluir so

--- a/aulaBD/aulaBD/views/listagemUsuarios.handlebars
+++ b/aulaBD/aulaBD/views/listagemUsuarios.handlebars
@@ -5,6 +5,7 @@
         <li>
             <h2>{{nome}}</h2>
             <p>{{username}}</p>
+            <button>Excluir usuario</button>
         </li>
         {{/each}}
     </ul>
