--- a/aulaBD/aulaBD/views/listagemUsuarios.handlebars
+++ b/aulaBD/aulaBD/views/listagemUsuarios.handlebars
@@ -1,14 +1,17 @@
 <h1>Usuários Cadastrados</h1>
 {{#if resp.length}}
-    <ul>
-        {{#each resp}}
-        <li>
-            <h2>{{nome}}</h2>
-            <p>{{username}}</p>
-            <button>Excluir usuario</button>
-        </li>
-        {{/each}}
-    </ul>
+<ul>
+    {{#each resp}}
+    <li>
+        <h2>{{nome}}</h2>
+        <p>{{username}}</p>
+        <form method="POST" action="/excluirUsuario">
+            <input type="hidden" name="username" value="{{this.username}}" />
+            <button type="submit">Excluir usuario</button>
+        </form>
+    </li>
+    {{/each}}
+</ul>
 {{else}}
-    <p>Não há usuários cadastrados.</p>
+<p>Não há usuários cadastrados.</p>
 {{/if}}
